# ai_project

./: .gitignore  README.md  指导多模型写测试.md  指导多模型进行设计.md
01_kb-viewer/: CLAUDE.md  README.md  crud-api.js  package-lock.json  server.js  start.bat  start.sh  start_ubuntu.sh
01_kb-viewer/.agent/plan/: knowledge-base-crud-implementation.md
01_kb-viewer/notes/: 测试图片.md
01_kb-viewer/notes/示例笔记/: 功能描述.md  快速开始.md  部署.md
01_kb-viewer/public/: editor.html  index.html
02_logshots/: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  WORKFLOW_GUIDE.md  vcpkg.json
02_logshots/.claude/: settings.local.json
02_logshots/agent/plans/: milestone3-stitcher.md  parsed-mapping-papert.md
02_logshots/docs/: milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md  milestone-7.md  tech-decisions.md
02_logshots/src/: CMakeLists.txt  main.cpp
02_logshots/src/app/: application.cpp  application.h  config.cpp  config.h
02_logshots/src/core/capture/: capture_core.cpp  capture_core.h  capture_runner.cpp  capture_runner.h  i_capture_engine.h  region_capture.cpp  region_capture.h  scroll_strategy.cpp  scroll_strategy.h  web_capture.cpp  web_capture.h  window_capture.cpp  window_capture.h
02_logshots/src/core/stitcher/: i_stitcher.h  image_stitcher.cpp  image_stitcher.h  overlap_detector.cpp  overlap_detector.h  sticky_detector.cpp  sticky_detector.h
02_logshots/src/core/window/: i_window_enumerator.cpp  i_window_enumerator.h
02_logshots/src/platform/interface/: i_screen_capturer.h  i_scroll_input.h
02_logshots/src/platform/mac/: mac_screen_capture.cpp  mac_screen_capture.h  mac_scroll_input.cpp  mac_scroll_input.h  mac_window_enum.h  mac_window_enum.mm
02_logshots/src/platform/win/: win_screen_capture.cpp  win_screen_capture.h  win_scroll_input.cpp  win_scroll_input.h  win_window_enum.cpp  win_window_enum.h
02_logshots/src/ui/: main_window.cpp  main_window.h  region_selector.cpp  region_selector.h  tray_manager.cpp  tray_manager.h  window_picker.cpp  window_picker.h
02_logshots/tests/: CMakeLists.txt  test_image_stitcher.cpp  test_overlap_detector.cpp  test_stitcher.cpp  test_window_enumerator.cpp  test_window_picker.cpp
03_youtube_checkvideo/: README.md  README_project.md  db.py  generate_report.py  generate_report1.py  generate_report5.py  local_transcript.py  main.py  monitor.py  server.py  server111.py  tele_test.py  telegram_bot.py  telegram_bot0.py  telegram_bot1.py  telegram_bot2.py  telegram_bot_last.py  test_transcript.py  test_transcript1.py  transcript_guide.py
03_youtube_checkvideo/templates/: index.html  index0.html  index00.html  index1.html  index11.html  index卡片.html
04_music-to-mv/: .env.example  .gitignore  ARCHITECTURE_v2.md  IMPLEMENTATION_GUIDE.md  LLM_CORE_SYSTEM.md  ROADMAP.md  Readme_claude1.md  Readme_claude2.md  SKILL.md  patch_bridge_merge.py  read_merge_sh.py  read_report_src.py  test_json_parse.py  测试指导命令.md
04_music-to-mv/music-to-mv-v2/: .env.example  .gitignore  DAILY_ARCHIVE_2026-05-03.md  DAILY_ARCHIVE_2026-05-04.md  ENVIRONMENT_SETUP.md  MIGRATION_GUIDE.md  OPTIMIZATION_ROADMAP.md  PROMPT_OPTIMIZATION_PLAN.md  QUICK_FIXES.md  README.md  VERIFICATION_REPORT.md  requirements.txt  run.sh  test_optimizations_integration.py  test_quick_wins.py
04_music-to-mv/music-to-mv-v2/.claude/: settings.local.json
04_music-to-mv/music-to-mv-v2/_test_api_output/: lyrics_response.json  lyrics_result.txt
04_music-to-mv/music-to-mv-v2/_tmp_report_summary/output/: execution_summary.json  llm_report.html
04_music-to-mv/music-to-mv-v2/config/: theme_reference_modes.json
04_music-to-mv/music-to-mv-v2/docs/archive/: DAILY_ARCHIVE_2026-05-02.md  DAILY_ARCHIVE_2026-05-06.md  DAILY_时间戳字幕对齐align.py优化处理.md
04_music-to-mv/music-to-mv-v2/docs/dev/: REFACTORING_EXAMPLES.md
04_music-to-mv/music-to-mv-v2/docs/guides/: BRANCH_GUIDE.md
04_music-to-mv/music-to-mv-v2/docs/planning/: NEXT_STEPS.md  OPTIMIZATION_ROADMAP.md  PROMPT_OPTIMIZATION_STATUS.md  ROADMAP.md
04_music-to-mv/music-to-mv-v2/prompts/: PROMPT_ARCHITECTURE.md  registry.yaml
04_music-to-mv/music-to-mv-v2/prompts/brief/: creative_brief_v1.txt
04_music-to-mv/music-to-mv-v2/prompts/image/: base_character_v1.txt  base_character_v2.txt  environment_anchor_v1.txt  scene_desc_v1.txt  shot_prompt_v1.txt  shot_variants_v1.txt  symbolic_anchor_v1.txt  visual_bible_v1.txt
04_music-to-mv/music-to-mv-v2/prompts/lyrics/: v1.0.txt  v2.0.txt
04_music-to-mv/music-to-mv-v2/prompts/music/: v1.0.txt  v1.1.txt
04_music-to-mv/music-to-mv-v2/src/: __init__.py  align.py  align_asr_worker.py  config_manager.py  exporter.py  image_quality.py  interaction.py  ken_burns.py  log_setup.py  main.py  pipeline.py  preview_report.py  project_manager.py  report_generator.py  scene_analyzer.py  scene_generator.py  scripts_bridge.py  song_structure.py  style_map.py
04_music-to-mv/music-to-mv-v2/tests/: __init__.py  test_align.py  test_exporter.py  test_full_pipeline.py  test_full_pipeline_v2.py  test_imports.py  test_integration_e2e.py  test_ken_burns.py  test_real_api.py  test_report_generator.py  test_scene_analyzer.py  test_scene_generator.py  test_song_structure.py  test_style_map.py
04_music-to-mv/music-to-mv-v2/tools/: check_image_quality.py  diagnose_alignment.py  generate_preview.py  list_registry.py  test_comfyui_api.py  test_reference_anchors.py  test_scene_prompt_provider.py  theme_reference_modes.py
04_music-to-mv/references/: alignment-workflow.md  export-workflow.md  lyrics-workflow.md  merge-workflow.md  music-workflow.md  video-workflow.md
04_music-to-mv/scripts/: align_lyrics.sh  analyze_llm_logs.py  analyze_srt.py  archive_llm_logs.py  assemble_mv.sh  burn_subtitle.sh  call_image_api.py  config.sh  create_mv.sh  generate_kb_video.py  generate_llm_report.py  generate_lyrics.sh  generate_music.sh  generate_scene_imgs.py  init_project.sh  list_projects.sh  llm_logger.py  merge_and_export.sh  preflight.sh  produce_mv.sh  status_funcs.sh  style_map.py
04_music-to-mv/temp/: 01_宏观架构分析.md  02_SKILL重构蓝图.md  03_实施计划.md  04_代码模块设计.md  05_架构对比总结.md  gemini.md
(+43 files in other folders)
